<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/myColor"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/foodfork_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="12dp"/>


    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="25dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_mobile"
        android:drawableLeft="@drawable/ic_mobile"
        android:drawablePadding="5dp"
        android:hint="Mobile Number (10 digits)"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="20dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMobileNumber"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="31dp"
        android:layout_marginRight="25dp"
        android:background="#ffffff"
        android:drawableStart="@drawable/ic_password"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="6"
        android:maxLines="1"
        android:padding="20dp"
        android:paddingTop="12dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="25dp"
        android:background="@color/myColGrey"
        android:text="@string/log_in"
        android:textColor="#ffffff"
        android:textColorHint="@color/colorAccent"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="Forgot Password? Click here to Reset"
        android:textColor="@color/myColGrey"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_now"
        android:textColor="@color/myColGrey"
        android:layout_alignParentBottom="true"
        android:textSize="14sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"/>

</RelativeLayout>